feat: replace Typescript to Java